[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/MainScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/SceneSwitcher.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/Piximisa.ttf" type="DynamicFontData" id=3]

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Overlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Overlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[node name="SceneSwitcher" type="Node"]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.2
method_call_mode = 1
anims/fade_in = SubResource( 1 )
anims/fade_out = SubResource( 2 )

[node name="MainScreen" parent="." instance=ExtResource( 1 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Overlay" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 4 )
text = "LOADING"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="scene_changed" from="MainScreen" to="." method="_on_MainScreen_scene_changed"]
